--- a/appfirmations/appfirmations/Base.lproj/Main.storyboard
+++ b/appfirmations/appfirmations/Base.lproj/Main.storyboard
@@ -40,7 +40,7 @@
                                         <barButtonItem key="backBarButtonItem" title="Favorite Quotes" id="7eP-VB-al4"/>
                                         <barButtonItem key="rightBarButtonItem" title="Favorite Quotes" id="FN7-K6-R9b">
                                             <connections>
-                                                <segue destination="0Wh-SX-MKx" kind="show" id="RJP-rF-Xs8"/>
+                                                <segue destination="WAq-xi-Gyn" kind="show" id="oAX-iH-WA6"/>
                                             </connections>
                                         </barButtonItem>
                                     </navigationItem>
@@ -67,59 +67,66 @@
             </objects>
             <point key="canvasLocation" x="137.68115942028987" y="100.44642857142857"/>
         </scene>
-        <!--Title-->
-        <scene sceneID="iFZ-Q8-IZH">
+        <!--Root View Controller-->
+        <scene sceneID="5ze-SX-SKE">
             <objects>
-                <tableViewController id="0Wh-SX-MKx" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="90" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="tL4-7v-ClB">
+                <tableViewController id="aol-Bj-Bk8" customClass="AffirmationsTableViewController" customModule="appfirmations" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="90" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="CM4-e7-MI1">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="AffirmationTableViewCell" rowHeight="90" id="Ykb-fi-TBq" customClass="AffirmationTableViewCell" customModule="appfirmations" customModuleProvider="target">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="m4N-rc-tfG" customClass="AffirmationTableViewCell" customModule="appfirmations" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="28" width="414" height="90"/>
                                 <autoresizingMask key="autoresizingMask"/>
-                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Ykb-fi-TBq" id="taS-Le-Kh8" userLabel="Content">
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="m4N-rc-tfG" id="TD7-U0-Cj9">
                                     <rect key="frame" x="0.0" y="0.0" width="414" height="89.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Heho" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="udy-pq-Oby" userLabel="affirmationBlurb">
-                                            <rect key="frame" x="20" y="44" width="374" height="46"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="affirmationBlurb" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LLI-p1-MCk">
+                                            <rect key="frame" x="20" y="11" width="374" height="68"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <navigationBar contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="gw1-rQ-tWg">
-                                            <rect key="frame" x="0.0" y="0.0" width="414" height="44"/>
-                                            <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
-                                            <items>
-                                                <navigationItem title="Favorite Affirmations" id="Ncc-KI-H9M">
-                                                    <barButtonItem key="rightBarButtonItem" title="Back" id="BjO-6l-wPE">
-                                                        <connections>
-                                                            <segue destination="BYZ-38-t0r" kind="show" id="urd-Ts-MB1"/>
-                                                        </connections>
-                                                    </barButtonItem>
-                                                </navigationItem>
-                                            </items>
-                                        </navigationBar>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="bb9-nK-U1e">
+                                            <rect key="frame" x="215" y="0.0" width="159" height="89"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        </imageView>
                                     </subviews>
                                 </tableViewCellContentView>
                                 <connections>
-                                    <outlet property="affirmationBlurb" destination="taS-Le-Kh8" id="fCq-D0-THb"/>
+                                    <outlet property="affirmationBlurb" destination="LLI-p1-MCk" id="v6B-rs-len"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
-                            <outlet property="dataSource" destination="0Wh-SX-MKx" id="osb-Ja-VpV"/>
-                            <outlet property="delegate" destination="0Wh-SX-MKx" id="JlJ-Ar-NJc"/>
+                            <outlet property="dataSource" destination="aol-Bj-Bk8" id="HF8-Qi-TcL"/>
+                            <outlet property="delegate" destination="aol-Bj-Bk8" id="IbS-1z-9nD"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Title" id="V7d-eD-R3A"/>
+                    <navigationItem key="navigationItem" title="Root View Controller" id="hIB-AZ-d7u"/>
                 </tableViewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="upD-t4-JdF" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="iFj-vY-XHJ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="824.63768115942037" y="75.669642857142847"/>
+            <point key="canvasLocation" x="1808.6956521739132" y="83.705357142857139"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="riX-YJ-vgK">
+            <objects>
+                <navigationController id="WAq-xi-Gyn" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="dgW-f2-Vsj">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="aol-Bj-Bk8" kind="relationship" relationship="rootViewController" id="82Y-cv-82b"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="7KO-Oo-oc8" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="887" y="84"/>
         </scene>
     </scenes>
 </document>
