--- a/appfirmations/appfirmations/Base.lproj/Main.storyboard
+++ b/appfirmations/appfirmations/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="IH5-28-8DZ">
     <device id="retina6_1" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -10,7 +10,23 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Title-->
+        <!--Navigation Controller-->
+        <scene sceneID="aoO-ge-3pO">
+            <objects>
+                <navigationController id="IH5-28-8DZ" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="PLT-bJ-HR8">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="jk4-sF-rtm"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="5ML-Yp-WKI" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1013" y="98"/>
+        </scene>
+        <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="appfirmations" customModuleProvider="target" sceneMemberID="viewController">
@@ -35,16 +51,6 @@
                             <navigationBar contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="siq-yZ-M5E">
                                 <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
-                                <items>
-                                    <navigationItem id="kaA-wa-hDJ">
-                                        <barButtonItem key="backBarButtonItem" title="Favorite Quotes" id="7eP-VB-al4"/>
-                                        <barButtonItem key="rightBarButtonItem" title="Favorite Quotes" id="FN7-K6-R9b">
-                                            <connections>
-                                                <segue destination="WAq-xi-Gyn" kind="show" id="oAX-iH-WA6"/>
-                                            </connections>
-                                        </barButtonItem>
-                                    </navigationItem>
-                                </items>
                             </navigationBar>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="V08-I2-rQT">
                                 <rect key="frame" x="180" y="433" width="55" height="30"/>
@@ -58,7 +64,13 @@
                         <color key="backgroundColor" red="0.69167894649999995" green="1" blue="0.95506341370000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
-                    <navigationItem key="navigationItem" title="Title" id="frq-lK-z5R"/>
+                    <navigationItem key="navigationItem" id="frq-lK-z5R">
+                        <barButtonItem key="rightBarButtonItem" title="Favorite Affirmations" id="Uqg-X7-9fg">
+                            <connections>
+                                <segue destination="WAq-xi-Gyn" kind="show" id="3qd-LI-Ads"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                     <connections>
                         <outlet property="quote" destination="Cla-pp-6Lr" id="gcI-TE-m7h"/>
                     </connections>
@@ -67,7 +79,23 @@
             </objects>
             <point key="canvasLocation" x="137.68115942028987" y="100.44642857142857"/>
         </scene>
-        <!--Root View Controller-->
+        <!--Navigation Controller-->
+        <scene sceneID="xfw-7f-WV3">
+            <objects>
+                <navigationController id="iip-M4-Amr" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="L02-NR-evJ">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="emd-G3-x9N"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="K11-gA-TME" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="875" y="-560"/>
+        </scene>
+        <!--Favorite Affirmations-->
         <scene sceneID="5ze-SX-SKE">
             <objects>
                 <tableViewController id="aol-Bj-Bk8" customClass="AffirmationsTableViewController" customModule="appfirmations" customModuleProvider="target" sceneMemberID="viewController">
@@ -103,7 +131,13 @@
                             <outlet property="delegate" destination="aol-Bj-Bk8" id="IbS-1z-9nD"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Root View Controller" id="hIB-AZ-d7u"/>
+                    <navigationItem key="navigationItem" title="Favorite Affirmations" id="hIB-AZ-d7u">
+                        <barButtonItem key="leftBarButtonItem" title="Back" id="dRd-hm-7Og">
+                            <connections>
+                                <segue destination="iip-M4-Amr" kind="show" id="8ts-ui-z2K"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iFj-vY-XHJ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -125,6 +159,22 @@
             </objects>
             <point key="canvasLocation" x="2535" y="83"/>
         </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="xpD-PW-jM5">
+            <objects>
+                <navigationController id="dMs-eR-G0d" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="5mi-rr-AWR">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="aol-Bj-Bk8" kind="relationship" relationship="rootViewController" id="NAz-nT-BVJ"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="jdl-ZP-Z1i" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2512" y="-596"/>
+        </scene>
         <!--View Controller-->
         <scene sceneID="Xvf-rB-TMP">
             <objects>
@@ -144,7 +194,13 @@
                         <color key="backgroundColor" red="0.69167894649999995" green="1" blue="0.95506341370000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <viewLayoutGuide key="safeArea" id="Dmn-CZ-fP4"/>
                     </view>
-                    <navigationItem key="navigationItem" id="L64-44-Zpf"/>
+                    <navigationItem key="navigationItem" id="L64-44-Zpf">
+                        <barButtonItem key="leftBarButtonItem" title="Back" id="4bC-HE-qxj">
+                            <connections>
+                                <segue destination="dMs-eR-G0d" kind="show" id="a7h-P4-76i"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="wAi-JB-bHy" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -167,4 +223,9 @@
             <point key="canvasLocation" x="887" y="84"/>
         </scene>
     </scenes>
+    <inferredMetricsTieBreakers>
+        <segue reference="ryf-3Y-ZvU"/>
+        <segue reference="NAz-nT-BVJ"/>
+        <segue reference="emd-G3-x9N"/>
+    </inferredMetricsTieBreakers>
 </document>
